Agregar link de receta a index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Recetas</h1>
-    
+    <a href="carneasada.html">Carne asada en olla de coccion lenta</a>
 </body>
 </html>
