Agregar encabezado e imagen a carneasada.html

--- a/carneasada.html
+++ b/carneasada.html
@@ -6,6 +6,7 @@
     <title>Carne asada</title>
 </head>
 <body>
-    
+    <h1>Receta de carne asada en olla de coccion lenta</h1>
+    <img src="https://www.allrecipes.com/thmb/qmYfL9em8pHTipF1yP_0Dw5cg6M=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-DDMFS-4x3-85f9412b1c2b4448881410c6910ef612.jpg">
 </body>
 </html>
