Agregar descripcion y lista de ingredientes a carneasada.html

--- a/carneasada.html
+++ b/carneasada.html
@@ -7,6 +7,25 @@
 </head>
 <body>
     <h1>Receta de carne asada en olla de coccion lenta</h1>
-    <img src="https://www.allrecipes.com/thmb/qmYfL9em8pHTipF1yP_0Dw5cg6M=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-DDMFS-4x3-85f9412b1c2b4448881410c6910ef612.jpg">
+        <img src="https://www.allrecipes.com/thmb/qmYfL9em8pHTipF1yP_0Dw5cg6M=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-DDMFS-4x3-85f9412b1c2b4448881410c6910ef612.jpg">
+        <h2>Descripcion</h2>
+        <p>Con un tiempo de preparacion de 20 minutos. Un tiempo de coccion de 5 horas y 30 minutos. Y un tiempo total de 5 horas y 50 minutos. Se obtendran 8 porciones.Este asado de ternera queda delicioso servido con puré de patatas. El verdadero secreto aquí es asegurarse de dorar la carne antes del estofado lento y largo.</p>
+        <h2>Ingredientes</h2>
+            <ul>
+                <li>1 (5 libras) de carne asada con hueso</li>
+                <li>Sal y pimienta al gusto</li>
+                <li>2 y 1/2 cucharadas de harina para todo uso, divididas o mas segun sea necesario</li>
+                <li>2 cucharadas de aceite vegetal</li>
+                <li>1 cucharada de mantequilla</li>
+                <li>8 onzas de champiñones rebanados</li>
+                <li>1 cebolla mediana, picada</li>
+                <li>2 dientes de ajo, picados</li>
+                <li>1 cucharada de pasta de tomate</li>
+                <li>2 y 1/2 tazas de caldo de pollo</li>
+                <li>3 zanahorias medianas, cortadas en trozos</li>
+                <li>2 tallos de apio, cortados en trozos</li>
+                <li>2 ramitas de tomillo fresco</li>
+                <li>1 ramita de romero fresco</li>
+            </ul>        
 </body>
 </html>
