--- a/carneasada.html
+++ b/carneasada.html
@@ -1,31 +1,96 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carne asada</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Receta de carne asada en olla de coccion lenta</h1>
-        <img src="https://www.allrecipes.com/thmb/qmYfL9em8pHTipF1yP_0Dw5cg6M=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-DDMFS-4x3-85f9412b1c2b4448881410c6910ef612.jpg">
-        <h2>Descripcion</h2>
-        <p>Con un tiempo de preparacion de 20 minutos. Un tiempo de coccion de 5 horas y 30 minutos. Y un tiempo total de 5 horas y 50 minutos. Se obtendran 8 porciones.Este asado de ternera queda delicioso servido con puré de patatas. El verdadero secreto aquí es asegurarse de dorar la carne antes del estofado lento y largo.</p>
-        <h2>Ingredientes</h2>
-            <ul>
-                <li>1 (5 libras) de carne asada con hueso</li>
-                <li>Sal y pimienta al gusto</li>
-                <li>2 y 1/2 cucharadas de harina para todo uso, divididas o mas segun sea necesario</li>
-                <li>2 cucharadas de aceite vegetal</li>
-                <li>1 cucharada de mantequilla</li>
-                <li>8 onzas de champiñones rebanados</li>
-                <li>1 cebolla mediana, picada</li>
-                <li>2 dientes de ajo, picados</li>
-                <li>1 cucharada de pasta de tomate</li>
-                <li>2 y 1/2 tazas de caldo de pollo</li>
-                <li>3 zanahorias medianas, cortadas en trozos</li>
-                <li>2 tallos de apio, cortados en trozos</li>
-                <li>2 ramitas de tomillo fresco</li>
-                <li>1 ramita de romero fresco</li>
-            </ul>        
-</body>
+    <img
+      src="https://www.allrecipes.com/thmb/qmYfL9em8pHTipF1yP_0Dw5cg6M=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-DDMFS-4x3-85f9412b1c2b4448881410c6910ef612.jpg"
+    />
+    <h2>Descripcion</h2>
+    <p>
+      Con un tiempo de preparacion de 20 minutos. Un tiempo de coccion de 5
+      horas y 30 minutos. Y un tiempo total de 5 horas y 50 minutos. Se
+      obtendran 8 porciones.Este asado de ternera queda delicioso servido con
+      puré de patatas. El verdadero secreto aquí es asegurarse de dorar la carne
+      antes del estofado lento y largo.
+    </p>
+    <h2>Ingredientes</h2>
+    <ul>
+      <li>1 (5 libras) de carne asada con hueso</li>
+      <li>Sal y pimienta al gusto</li>
+      <li>
+        2 y 1/2 cucharadas de harina para todo uso, divididas o mas segun sea
+        necesario
+      </li>
+      <li>2 cucharadas de aceite vegetal</li>
+      <li>1 cucharada de mantequilla</li>
+      <li>8 onzas de champiñones rebanados</li>
+      <li>1 cebolla mediana, picada</li>
+      <li>2 dientes de ajo, picados</li>
+      <li>1 cucharada de pasta de tomate</li>
+      <li>2 y 1/2 tazas de caldo de pollo</li>
+      <li>3 zanahorias medianas, cortadas en trozos</li>
+      <li>2 tallos de apio, cortados en trozos</li>
+      <li>2 ramitas de tomillo fresco</li>
+      <li>1 ramita de romero fresco</li>
+    </ul>
+    <h2>Pasos</h2>
+    <ol>
+      <li>
+        <p>
+          Sazone generosamente ambos lados del asado con sal y pimienta.
+          Espolvorea la parte superior del asado con 1 cucharada de harina y
+          dale palmaditas sobre la carne. Sacuda el exceso.
+        </p>
+      </li>
+      <li>
+        <p>
+          Calienta el aceite vegetal en una sartén grande a fuego medio-alto.
+          Dorar el asado hasta que esté bien dorado, de 5 a 6 minutos por lado.
+          Retire el asado de la sartén y reserve.
+        </p>
+      </li>
+      <li>
+        <p>
+          Reduzca el fuego a medio. Derrita la mantequilla en la sartén; Cocine
+          y revuelva los champiñones con la mantequilla hasta que estén tiernos,
+          de 3 a 4 minutos. Agrega la cebolla; cocine hasta que las cebollas
+          estén traslúcidas y doradas, aproximadamente 5 minutos. Agrega el ajo;
+          revuelva hasta que esté fragante, aproximadamente 1 minuto.
+        </p>
+      </li>
+      <li>
+        <p>
+          Agrega la 1 1/2 cucharada de harina restante; cocine y revuelva
+          durante aproximadamente 1 minuto. Agregue la pasta de tomate y cocine
+          por un minuto más. Agrega lentamente el caldo de pollo mientras
+          revuelves; volver a hervir a fuego lento. Retire la sartén del fuego.
+        </p>
+      </li>
+      <li>
+        <p>
+          Coloque las zanahorias y el apio en la olla de cocción lenta. Coloque
+          el asado sobre las verduras y vierta el jugo acumulado. Agrega el
+          tomillo y el romero. Vierta la mezcla de cebolla y champiñones sobre
+          la carne asada.
+        </p>
+      </li>
+      <li>
+        <p>Cubra y cocine a temperatura alta durante 5 a 6 horas.</p>
+      </li>
+      <li>
+        <p>
+          Retire la grasa de la superficie y retire los huesos. Sazone con sal y
+          pimienta.
+        </p>
+      </li>
+      <li>
+        <p>¡Sirve caliente y disfruta!</p>
+      </li>
+    </ol>
+  </body>
 </html>
