Agregar imagenes por paso a carneasada.html

--- a/carneasada.html
+++ b/carneasada.html
@@ -46,6 +46,9 @@
           Espolvorea la parte superior del asado con 1 cucharada de harina y
           dale palmaditas sobre la carne. Sacuda el exceso.
         </p>
+        <img
+          src="https://www.allrecipes.com/thmb/6MOcueZlqkTpkhQFQpdWldV27cQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-ddmfs-step1-0680-4x3-6c31e100b5134c829c054ac89b5dd680.jpg"
+        />
       </li>
       <li>
         <p>
@@ -53,6 +56,9 @@
           Dorar el asado hasta que esté bien dorado, de 5 a 6 minutos por lado.
           Retire el asado de la sartén y reserve.
         </p>
+        <img
+          src="https://www.allrecipes.com/thmb/gsLx9JPm_njJJmJ7p5RgarLBUNg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-ddmfs-step2-0685-4x3-cd63ff63c4dc494a9282c54be84a5356.jpg"
+        />
       </li>
       <li>
         <p>
@@ -62,6 +68,9 @@
           estén traslúcidas y doradas, aproximadamente 5 minutos. Agrega el ajo;
           revuelva hasta que esté fragante, aproximadamente 1 minuto.
         </p>
+        <img
+          src="https://www.allrecipes.com/thmb/TQhtSwAzW49xMrZpav-fWhOB59M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-ddmfs-step3-0687-4x3-2419b488ab5d4533870df889b8212a71.jpg"
+        />
       </li>
       <li>
         <p>
@@ -70,6 +79,9 @@
           por un minuto más. Agrega lentamente el caldo de pollo mientras
           revuelves; volver a hervir a fuego lento. Retire la sartén del fuego.
         </p>
+        <img
+          src="https://www.allrecipes.com/thmb/pfvxvmuP7SMHzV9p-kiq1mV5qKU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-ddmfs-step4-0688-4x3-a91e969c5eef4f3da969bd5e355be40a.jpg"
+        />
       </li>
       <li>
         <p>
@@ -78,6 +90,9 @@
           tomillo y el romero. Vierta la mezcla de cebolla y champiñones sobre
           la carne asada.
         </p>
+        <img
+          src="https://www.allrecipes.com/thmb/8X65WanzvheHyNZdLsf4zIQr3Do=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-ddmfs-step6-0692-4x3-34f7215fbc944dce83a8e2fddcd15706.jpg"
+        />
       </li>
       <li>
         <p>Cubra y cocine a temperatura alta durante 5 a 6 horas.</p>
@@ -87,9 +102,15 @@
           Retire la grasa de la superficie y retire los huesos. Sazone con sal y
           pimienta.
         </p>
+        <img
+          src="https://www.allrecipes.com/thmb/_2gcTsy0aB4UVSfN0kQDOOi7-AM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-ddmfs-step7-4x3-5be8e10bc0aa4560bb3bda98aa8754cc.jpg"
+        />
       </li>
       <li>
         <p>¡Sirve caliente y disfruta!</p>
+        <img
+          src="https://www.allrecipes.com/thmb/8AWX-PrKdtnyOqxIFkSV_daqVtE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220125-slow-cooker-beef-pot-roast-DDMFS-4x3-85f9412b1c2b4448881410c6910ef612.jpg"
+        />
       </li>
     </ol>
   </body>
