Receta de arroz frito agregada

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Recetas</h1>
     <a href="carneasada.html">Carne asada en olla de coccion lenta</a>
+    <a href="arrozfrito.html">Arroz frito</a>
 </body>
 </html>
