--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Recetas</title>
-</head>
-<body>
-    <h1>Recetas</h1>
-    <a href="carneasada.html">Carne asada en olla de coccion lenta</a>
-    <a href="arrozfrito.html">Arroz frito</a>
-</body>
-</html>
+  </head>
+  <body>
+    <div class="header">
+      <h1>Menu de Recetas</h1>
+    </div>
+
+    <div class="container">
+        <div class="recipe-card">
+          <div class="recipe-image carne-asada-img"></div>
+          <div class="recipe-content">
+            <h2 class="recipe-title">Carne Asada en Olla de Cocción Lenta</h2>
+            <a href="carneasada.html" class="recipe-link">Ver receta</a>
+          </div>
+        </div>
+        
+        <div class="recipe-card">
+          <div class="recipe-image arroz-frito-img"></div>
+          <div class="recipe-content">
+            <h2 class="recipe-title">Arroz Frito</h2>
+            <a href="arrozfrito.html" class="recipe-link">Ver receta</a>
+          </div>
+        </div>
+      </div>
+  </body>
+  </html>
